Font size increased

--- a/cv/education.tex
+++ b/cv/education.tex
@@ -1,8 +1,7 @@
 %-------------------------------------------------------------------------------
 %	SECTION TITLE
 %-------------------------------------------------------------------------------
-\cvsection{Education}\\
-\vspace{-3mm}
+\cvsection{Education}
 %-------------------------------------------------------------------------------
 %	CONTENT
 %-------------------------------------------------------------------------------
@@ -16,11 +15,10 @@
     {2023} % Date(s)
     {
       \begin{cvitems} % Description(s) bullet points
-        \item {Participated in advanced coursework on machine learning, and computer vision • Proficient in using various Python libraries such as Keras, Scikit-learn, Pandas, Numpy, and SciPy for data manipulation, analysis, and visualization • Utilized Tensorflow for creating and training neural networks}
+        \item {Participated in advanced workshops on machine learning, and computer vision • Proficient in using various Python libraries such as Keras, Scikit-learn, Pandas, Numpy, and SciPy for data manipulation, analysis, and visualization • Utilized Tensorflow for creating and training neural networks.}
         %\item {\textbf{Courses:} }
       \end{cvitems}
     }
-    
   \cventry
     {Pasargad Institute of Higher Education} % Institution
     {BSc in Computer Engineering - Software} % Degree
@@ -28,7 +26,12 @@
     {2017} % Date(s)
     {
       \begin{cvitems} % Description(s) bullet points
-        \item {Graduated with Distinction • TA for Database design, Algorithm design, Data structure, and Automata courses.}
+        \item {East-Asia ACM coding contest:}
+        \vspace{4mm}  
+        \begin{cvitems}
+            \item{Recieved the prticipation award for years 2013, 2015 and 2016.}
+            \item{Utilized C++ programming language to solve multiple chalanges in a short time span, showcasing endurance in an agile environment.}
+          \end{cvitems}
       \end{cvitems}
     }
 %---------------------------------------------------------
