--- a/cv/extracurricular.tex
+++ b/cv/extracurricular.tex
@@ -1,14 +1,13 @@
 %-------------------------------------------------------------------------------
 %	SECTION TITLE
 %-------------------------------------------------------------------------------
-\cvsection{Projects}\\
+\cvsection{Projects}
 %-------------------------------------------------------------------------------
 %	CONTENT
 %-------------------------------------------------------------------------------
-\begin{minipage}[t]{0.48\linewidth}
+% \begin{minipage}[t]{0.48\linewidth}
   
 \begin{cventries}
-
 %---------------------------------------------------------
   \cventry
   {Data Scientist} % Affiliation/role
@@ -17,11 +16,12 @@
   {Feb 2023} % Date(s)
   {
     \begin{cvitems} % Description(s) of experience/contributions/knowledge
-      \item {Explored prediction algorithms that showed the potential for predicting stock price behavior.}
-      \item {Explored the use of neural networks and ensemble methods as potential alternative approaches for predicting stock prices.}
-      \item {conducting a comprehensive analysis using cross-validation techniques on various stock exchanges.}
+      \item {Selected stock exchange indice data from various countries and employed data science techniques to assess the feasibility of uising Machine Learning models for price trend determination.}
+      \item{Explored different Machine Learning techniques, including Regression models with Scikit-learn and time series techniques with Neural Networks using TensorFlow and Keras APIs for Python.}
+      \item{Ensured data robustness and correctness through a data cleaning and preprocessing pipeline using Pandas and NumPy libraries for Python.}
+      \item{Effectively communicated results and findings using data visualization techniques with the Matplotlib Python library.}
     \end{cvitems}
-  } 
+  }%
 %---------------------------------------------------------
   \cventry
   {Data Scientist}
@@ -30,58 +30,57 @@
   {Nov 2022}
   {
     \begin{cvitems}
-      \item {Utilized Python and Pandas to efficiently process the large dataset.}
-      \item {Investigated patterns and trends in tweet activity, including the number of tweets per day and weekdays vs. weekends comparison.}
-      \item {Employed data visualization techniques to present findings.}
+      \item {Tasked with analyzing one month of European tweets (100GB data), I used the Twitter API, streamed the data, and processed it with NumPy and Pandas.}
+      \item{Explored various tweet statistics, including user tweet counts, regional activity on weekdays vs. weekends, and user distribution through geospatial attributes.}
+      \item{Conducted advanced analysis by cross-referencing word maps with country-specific hot topics to infer correlations.}
+      \item{Communicated the findings using Matplotlib for data visualization and Latex for report writing.}
     \end{cvitems}
-  }
+  }%
 %---------------------------------------------------------
-  \end{cventries}
-\end{minipage}
-\hspace{0.04\linewidth}
-\begin{minipage}[t]{0.48\linewidth}
-\begin{cventries}
+%   \end{cventries}
+% \end{minipage}
+% \hspace{0.04\linewidth}
+% \begin{minipage}[t]{0.48\linewidth}
+% \begin{cventries}
   %---------------------------------------------------------
   \cventry
-    {Core Developer} % Affiliation/role
-    {Shiraz Start-up Weekend} % Organization/group
+    {Software Developer} % Affiliation/role
+    {Foodic Startup Project} % Organization/group
     {Shiraz, Iran} % Location
     {Jun 2017} % Date(s)
     {
       \begin{cvitems} % Description(s) of experience/contributions/knowledge
-        \item {Winner of the grant for the best idea (Foodic).}
-        \item {Gained experience in Java for android app development and using C\# for web-api and Telegram bot development.}
+        \item{Pitched and singd a startup opportunity with DIMOND accelerator during a startup weekend event.}
+        \item{Efficiently developed a demo software stack for the project within a three-day timeframe.}
+        \item{Developed an Android application in Java and designed a Telegram bot and a website using C\# with .Net and SQL, showcasing technology utilization in an agile environment.}
       \end{cvitems}
-    }
+    }%
 %---------------------------------------------------------
-  \cventry
-    {Developer} % Affiliation/role
-    {Drone Auto-pilot Board} % Organization/group
-    {Shiraz, Iran} % Location
-    {Mar 2016 - Oct 2016} % Date(s)
-    {
-      \begin{cvitems} % Description(s) of experience/contributions/knowledge
-        \item {Designed and implemented the circuit board.}
-        \item {Implemented the PID controller with C++.}
-        \item {Gained experience in embeded programming.}
-        \item {Developed an understanding of circuit boards.}
-      \end{cvitems}
-      }
+  % \cventry
+  %   {Developer} % Affiliation/role
+  %   {Drone Auto-pilot Board} % Organization/group
+  %   {Shiraz, Iran} % Location
+  %   {Mar 2016 - Oct 2016} % Date(s)
+  %   {
+  %     \begin{cvitems} % Description(s) of experience/contributions/knowledge
+  %       \item {Designed and implemented the circuit board.}
+  %       \item {Implemented the PID controller with C++.}
+  %       \item {Gained experience in embeded programming.}
+  %       \item {Developed an understanding of circuit boards.}
+  %     \end{cvitems}
+  %   }%
 %---------------------------------------------------------
-  \cventry
-    {C++ Programmer} % Affiliation/role
-    {East-Asia ACM Coding Contest} % Organization/group
-    {Tehran, Iran} % Location
-    {2014, 2016, 2017} % Date(s)
-    {
-      \begin{cvitems} % Description(s) of experience/contributions/knowledge
-        \item {Developed strategies for solving given problems.}
-        \item {Implemented the agreed upon strategies with teammates.}
-        \item {Gained experience in team work and agile development.}
-      \end{cvitems}
-    }
-\
+  % \cventry
+  %   {C++ Programmer} % Affiliation/role
+  %   {East-Asia ACM Coding Contest} % Organization/group
+  %   {Tehran, Iran} % Location
+  %   {2014, 2016, 2017} % Date(s)
+  %   {
+  %     \begin{cvitems} % Description(s) of experience/contributions/knowledge
+  %       \item {Developed strategies for solving given problems and implemented the agreed upon strategies with teammates.}
+  %     \end{cvitems}
+  %   }%
 %---------------------------------------------------------
 \end{cventries}
-\end{minipage}
-\vspace{3mm}\\
+% \end{minipage}
+% \vspace{3mm}\\
