--- a/sections/resume.tex
+++ b/sections/resume.tex
@@ -26,13 +26,13 @@
 %-------------------------------------------------------------------------------
 \vspace{-4mm}
 \input{../cv/summary.tex}
-\vspace{-4mm}
+%\vspace{-4mm}
 \input{../cv/experience.tex}
-\vspace{-4mm}
+%\vspace{-4mm}
 \input{../cv/extracurricular.tex}
-\vspace{-4mm}
-\input{../cv/skills.tex}
-\vspace{-4mm}
+%\vspace{-4mm}
+% \input{../cv/skills.tex}
+% \vspace{-4mm}
 \input{../cv/education.tex}
 %\vspace{-4mm}
 %\input{../cv/interests.tex}
