--- a/cv/experience.tex
+++ b/cv/experience.tex
@@ -17,9 +17,9 @@
     {Aug 2020 - Aug 2022} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Successfully resolved a recurring payment verification issue in the accounting department by leading the development of an API integration with a bank API, creating SQL queries and stored procedures for record comparison, and achieving a zero-error rate post-deployment, significantly enhancing operational efficiency.}
-        \item {Streamlined net profit calculations for a legacy accounting software, facing a time-sensitive 4-week deadline. Developed a solution, utilizing SQL querying and C\# programming to reverse-engineer the software, creating a dashboard on top of the existing database, resulting in a 10\% improvement in accuracy compared to the previous software, and successfully deployed the project ahead of schedule.}
-        \item {Leveraged SQL expertise in a BI environment for comprehensive data analysis, enabling data-driven insights.}
+        \item{Successfully resolved a recurring payment verification issue in the accounting department by leading the development of an API, using C\# and .Net framework and complex SQL queries for record comparison, and achieving a zero-error rate post-deployment, significantly enhancing operational efficiency.}
+        \item{Streamlined net profit calculations for a legacy accounting software, facing a time-sensitive 4-week deadline. Developed a solution, using SQL querying and C\# programming to reverse-engineer the existing software, creating a dashboard on top of the existing database, resulting in a 10\% improvement in accuracy and 30\% increase in sales.}
+        \item{Developed of an employee management software with C\# and SQL to track employees attendance, calculat salaries, taxes, and insurance, and produce payslips and reports. Reduced the accounting department's workload, and cut company costs by 5\%, eliminating calculation errors.}
       \end{cvitems}
     }%
 %---------------------------------------------------------
