--- a/cv/education.tex
+++ b/cv/education.tex
@@ -29,8 +29,8 @@
         \item {East-Asia ACM coding contest:}
         \vspace{4mm}  
         \begin{cvitems}
-            \item{Recieved the prticipation award for years 2013, 2015 and 2016.}
-            \item{Utilized C++ programming language to solve multiple chalanges in a short time span, showcasing endurance in an agile environment.}
+            \item{Participated as the lead programmer during 2013, 2015 and 2016 coding contests.}
+            \item{Utilized C++ programming language to solve multiple chalanges in a short time span, showcasing endurance in an agile environment, and problem solving skills.}
           \end{cvitems}
       \end{cvitems}
     }
