--- a/main.tex
+++ b/main.tex
@@ -1,7 +1,7 @@
 \documentclass[11pt, a4paper]{russell}
 
 % Configure page margins with geometry
-\geometry{left=1.0cm, top=.6cm, right=1.0cm, bottom=1.0cm, footskip=0cm}
+\geometry{left=1.0cm, top=1.cm, right=1.0cm, bottom=1.0cm, footskip=2mm}
 
 % Specify the location of the included fonts
 \fontdir[fonts/]
