change in details

--- a/cv/extracurricular.tex
+++ b/cv/extracurricular.tex
@@ -16,7 +16,7 @@
   {Feb 2023} % Date(s)
   {
     \begin{cvitems} % Description(s) of experience/contributions/knowledge
-      \item {Selected stock exchange indice data from various countries and employed data science techniques to assess the feasibility of uising Machine Learning models for price trend determination.}
+      \item {Selected stock exchange index data from various countries and employed data science techniques to assess the feasibility of uising Machine Learning models for price trend determination.}
       \item{Explored different Machine Learning techniques, including Regression models with Scikit-learn and time series techniques with Neural Networks using TensorFlow and Keras APIs for Python.}
       \item{Ensured data robustness and correctness through a data cleaning and preprocessing pipeline using Pandas and NumPy libraries for Python.}
       \item{Effectively communicated results and findings using data visualization techniques with the Matplotlib Python library.}
@@ -30,7 +30,7 @@
   {Nov 2022}
   {
     \begin{cvitems}
-      \item {Tasked with analyzing one month of European tweets (100GB data), I used the Twitter API, streamed the data, and processed it with NumPy and Pandas.}
+      \item {Tasked with analyzing one month of tweets (100GB data) posted from Europe, I used the Twitter API, streamed the data, and processed it with NumPy and Pandas.}
       \item{Explored various tweet statistics, including user tweet counts, regional activity on weekdays vs. weekends, and user distribution through geospatial attributes.}
       \item{Conducted advanced analysis by cross-referencing word maps with country-specific hot topics to infer correlations.}
       \item{Communicated the findings using Matplotlib for data visualization and Latex for report writing.}
