--- a/sections/cover.tex
+++ b/sections/cover.tex
@@ -133,28 +133,51 @@
 
 % I am eager to contribute to your fast-growing team and take part in shaping a future where financial crime is eradicated. Thank you for considering my application. I am excited about the opportunity to discuss how my background and expertise align with ComplyAdvantage's goals.
 
-\recipientname{LiveScore Group}
+% \recipientname{LiveScore Group}
+% \recipientaddress{London, England, United Kingdom}
+% \lettertitle{Application for Principal Econometrician/Data Scientist role}
+% \letterdate{\today}
+% \letteropening{Dear hiring manager,}
+
+% \makelettertitle
+
+% \begin{cvletter}
+% I am writing to express my strong interest in the Principal Econometrician/Data Scientist position within the Marketing \& Business Insights team at LiveScore Group. As an accomplished Data Scientist with a diverse background and a commitment to delivering actionable insights through advanced analytical techniques, I am confident that my skills and experience align perfectly with the requirements of this role.
+
+% In my previous role as a Software Developer at Hadish Communication Co., I have demonstrated my ability to leverage data-driven decision-making to drive operational efficiency and business growth. I have a proven track record of leading projects and delivering innovative solutions that have significantly improved processes and accuracy. For instance, I successfully resolved a recurring payment verification issue by developing an API integration and utilizing SQL-based data analysis, achieving a zero-error rate post-deployment. Additionally, I streamlined net profit calculations for a legacy accounting software, resulting in a 15\% improvement in accuracy through SQL querying and C\# programming.
+
+% My academic background further reinforces my qualifications for this role. I recently completed an MSc in Data Science with Artificial Intelligence at the University of Exeter, where I gained advanced knowledge in machine learning, deep learning, and data analysis. I have extensive experience using Python, including libraries such as NumPy, Pandas, Scikit Learn, TensorFlow, and Matplotlib, making me proficient in data manipulation, analysis, and visualization.
+
+% Furthermore, I have a strong foundation in SQL, including database design, stored procedures, and database management. My expertise extends to statistical modeling, aligning perfectly with the requirements of the Principal Econometrician role. I have also had the opportunity to work on projects that involved data visualization, which would be valuable in effectively communicating complex outputs to stakeholders.
+
+% I am highly motivated, proactive, and adaptable, with a passion for technology and engineering. I thrive in collaborative environments and am eager to contribute to building a best-in-class in-house capability, leveraging customer-level data and advanced analytical techniques to drive growth and profitability for LiveScore Group.
+
+% I am excited about the opportunity to join LiveScore Group. I am confident that my skills and experience make me a strong fit for this role, and I am committed to contributing to the continued success of the Marketing \& Business Insights team.
+
+% Thank you for considering my application. I look forward to the opportunity for further discussion and the possibility of contributing to the success of LiveScore Group.
+
+\recipientname{Linklaters}
 \recipientaddress{London, England, United Kingdom}
-\lettertitle{Application for Principal Econometrician/Data Scientist role}
+\lettertitle{Application for Finance Apprenticeship}
 \letterdate{\today}
 \letteropening{Dear hiring manager,}
 
 \makelettertitle
 
 \begin{cvletter}
-I am writing to express my strong interest in the Principal Econometrician/Data Scientist position within the Marketing \& Business Insights team at LiveScore Group. As an accomplished Data Scientist with a diverse background and a commitment to delivering actionable insights through advanced analytical techniques, I am confident that my skills and experience align perfectly with the requirements of this role.
 
-In my previous role as a Software Developer at Hadish Communication Co., I have demonstrated my ability to leverage data-driven decision-making to drive operational efficiency and business growth. I have a proven track record of leading projects and delivering innovative solutions that have significantly improved processes and accuracy. For instance, I successfully resolved a recurring payment verification issue by developing an API integration and utilizing SQL-based data analysis, achieving a zero-error rate post-deployment. Additionally, I streamlined net profit calculations for a legacy accounting software, resulting in a 15\% improvement in accuracy through SQL querying and C\# programming.
+I am writing to express my strong interest in the Finance Apprenticeship opportunity at Linklaters, as advertised. Based on my educational background and professional experiences, I believe I am well-suited for this role and would be honored to contribute to your esteemed organization.
 
-My academic background further reinforces my qualifications for this role. I recently completed an MSc in Data Science with Artificial Intelligence at the University of Exeter, where I gained advanced knowledge in machine learning, deep learning, and data analysis. I have extensive experience using Python, including libraries such as NumPy, Pandas, Scikit Learn, TensorFlow, and Matplotlib, making me proficient in data manipulation, analysis, and visualization.
+As a skilled Data Scientist and recent, I bring a strong analytical and problem-solving background to the table. While my past roles have primarily revolved around data analysis and software development, I am excited to pivot my career towards finance and accounting, as this aligns with my long-standing interest in financial matters.
 
-Furthermore, I have a strong foundation in SQL, including database design, stored procedures, and database management. My expertise extends to statistical modeling, aligning perfectly with the requirements of the Principal Econometrician role. I have also had the opportunity to work on projects that involved data visualization, which would be valuable in effectively communicating complex outputs to stakeholders.
+I am enthusiastic about working within your global finance team, providing top-notch financial services, and contributing to the success of Linklaters. I am a quick learner and a strong problem solver, which I believe are essential attributes for thriving in this role.
 
-I am highly motivated, proactive, and adaptable, with a passion for technology and engineering. I thrive in collaborative environments and am eager to contribute to building a best-in-class in-house capability, leveraging customer-level data and advanced analytical techniques to drive growth and profitability for LiveScore Group.
+Furthermore, your emphasis on offering opportunities for gaining skills and experience, is an appealing aspect of this apprenticeship. I am dedicated to continuous learning and development, and I am excited about the prospect of working towards a finance qualification with support from the firm.
 
-I am excited about the opportunity to join LiveScore Group. I am confident that my skills and experience make me a strong fit for this role, and I am committed to contributing to the continued success of the Marketing \& Business Insights team.
+I am confident that my dedication, interpersonal skills, and analytical mindset will be valuable assets in this role. I am eager to discuss how my unique background can contribute to the team at Linklaters and help me achieve professional excellence in the field of finance.
 
-Thank you for considering my application. I look forward to the opportunity for further discussion and the possibility of contributing to the success of LiveScore Group.
+Thank you for considering my application. I look forward to the opportunity to discuss my candidacy further.
+
 \end{cvletter}
 
 \makeletterclosing
