cover letter updated

--- a/sections/cover.tex
+++ b/sections/cover.tex
@@ -156,9 +156,9 @@
 
 % Thank you for considering my application. I look forward to the opportunity for further discussion and the possibility of contributing to the success of LiveScore Group.
 
-\recipientname{Linklaters}
+\recipientname{JOE \& THE JUICE}
 \recipientaddress{London, England, United Kingdom}
-\lettertitle{Application for Finance Apprenticeship}
+\lettertitle{Application for JUICER}
 \letterdate{\today}
 \letteropening{Dear hiring manager,}
 
@@ -166,24 +166,27 @@
 
 \begin{cvletter}
 
-I am writing to express my strong interest in the Finance Apprenticeship opportunity at Linklaters, as advertised. Based on my educational background and professional experiences, I believe I am well-suited for this role and would be honored to contribute to your esteemed organization.
+I am excited to express my interest in the Juicer position at Joe \& The Juice. While my qualifications are different from what is expected for this role, I am genuinely passionate about contributing to the team and helping Joe \& The Juice succeed. I have recently completed my master’s degree, and this marks my first experience working in the UK. It would be advantageous for me to gain experience in a social environment and further develop my interpersonal skills.
 
-As a skilled Data Scientist and recent, I bring a strong analytical and problem-solving background to the table. While my past roles have primarily revolved around data analysis and software development, I am excited to pivot my career towards finance and accounting, as this aligns with my long-standing interest in financial matters.
+First and foremost, I want to emphasize that my previous experience in various roles, including Software Developer, has equipped me with valuable skills that I believe can enhance my performance. My ability to adapt, learn quickly, and work effectively in fast-paced environments has been demonstrated throughout my career. I am confident that I can leverage this experience to not only excel in the role but also potentially contribute to the overall success of the store.
 
-I am enthusiastic about working within your global finance team, providing top-notch financial services, and contributing to the success of Linklaters. I am a quick learner and a strong problem solver, which I believe are essential attributes for thriving in this role.
+My background includes:
+Customer Service: Throughout my career, I have developed strong interpersonal skills, ensuring that customers have a positive experience. I understand the importance of engaging in meaningful customer dialogues and providing exceptional service.
+Fast-Paced Environment: I am no stranger to working in high-energy environments, handling multiple tasks efficiently, and maintaining a positive attitude, even during peak hours.
+Learning: My eagerness to learn and adapt has been a driving force behind my professional growth.
 
-Furthermore, your emphasis on offering opportunities for gaining skills and experience, is an appealing aspect of this apprenticeship. I am dedicated to continuous learning and development, and I am excited about the prospect of working towards a finance qualification with support from the firm.
+I am excited about the chance to contribute to the team, embrace the company’s culture, and become an integral part of the Joe \& The Juice family.
 
-I am confident that my dedication, interpersonal skills, and analytical mindset will be valuable assets in this role. I am eager to discuss how my unique background can contribute to the team at Linklaters and help me achieve professional excellence in the field of finance.
+My decision to apply for this position is driven by the opportunity to work in a social environment. I am more than willing to embrace the unique culture that Joe \& The Juice offers and look forward to being part of your team.
 
-Thank you for considering my application. I look forward to the opportunity to discuss my candidacy further.
+Thank you for considering my application. I am enthusiastic about the opportunity to discuss how my skills and experiences can contribute to your team. Please feel free to contact me to arrange an interview.
 
 \end{cvletter}
 
 \makeletterclosing
 
 \vspace*{\fill}
-\centering{\textbf{References available upon request.}}
+%\centering{\textbf{References available upon request.}}
 
 \end{cvletter}
 
